log
Sun May  4 17:27:59 -04 2025: 
Compilation failed
test.c:506:9: error: variable 'all_correct' set but not used [-Werror,-Wunused-but-set-variable]
    int all_correct=1;
        ^
1 error generated.
f63ac8e
Sun May  4 17:52:25 -04 2025: 
 treemap.c | 115 +++++++++++++++++++++++++++++++++++++++-----------------------
 1 file changed, 72 insertions(+), 43 deletions(-)
Compilation failed
test.c:506:9: error: variable 'all_correct' set but not used [-Werror,-Wunused-but-set-variable]
    int all_correct=1;
        ^
1 error generated.
df138cf
Sun May  4 17:54:12 -04 2025: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
Compilation failed
test.c:506:9: error: variable 'all_correct' set but not used [-Werror,-Wunused-but-set-variable]
    int all_correct=1;
        ^
1 error generated.
ba20bee
Sun May  4 18:23:21 -04 2025: 
 treemap.c | 166 +++++++++++++++++++-------------------------------------------
 1 file changed, 51 insertions(+), 115 deletions(-)
Compilation failed
In file included from test.c:4:
./treemap.c:115:5: error: void function 'removeNode' should not return a value [-Wreturn-type]
    return NULL;
    ^      ~~~~
test.c:506:9: error: variable 'all_correct' set but not used [-Werror,-Wunused-but-set-variable]
    int all_correct=1;
        ^
2 errors generated.
e196ab7
Sun May  4 18:23:43 -04 2025: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
Compilation failed
test.c:506:9: error: variable 'all_correct' set but not used [-Werror,-Wunused-but-set-variable]
    int all_correct=1;
        ^
1 error generated.
23de55c
Sun May  4 18:33:04 -04 2025: 
 treemap.c | 129 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 128 insertions(+), 1 deletion(-)
Compilation failed
test.c:506:9: error: variable 'all_correct' set but not used [-Werror,-Wunused-but-set-variable]
    int all_correct=1;
        ^
1 error generated.
6906446
Sun May  4 18:37:16 -04 2025: 
Compilation failed
test.c:506:9: error: variable 'all_correct' set but not used [-Werror,-Wunused-but-set-variable]
    int all_correct=1;
        ^
1 error generated.
309b29b
Sun May  4 18:41:14 -04 2025: 
Compilation failed
test.c:506:9: error: variable 'all_correct' set but not used [-Werror,-Wunused-but-set-variable]
    int all_correct=1;
        ^
1 error generated.
f57373b
Sun May  4 18:52:10 -04 2025: 
Compilation failed
test.c:506:9: error: variable 'all_correct' set but not used [-Werror,-Wunused-but-set-variable]
    int all_correct=1;
        ^
1 error generated.
5b771ce
Sun May  4 18:55:23 -04 2025: 
 tests:  29|0
total_score: 70/70
945c316
Sun May  4 19:01:07 -04 2025: 
 treemap.c | 231 +++++++++++++++++++++++---------------------------------------
 1 file changed, 84 insertions(+), 147 deletions(-)
 tests:  0|0
e0d11c9
Sun May  4 19:02:36 -04 2025: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
4e1680b
Sun May  4 19:06:24 -04 2025: 
 treemap.c | 230 +++++++++++++++++++++++++++++++++++++++-----------------------
 1 file changed, 146 insertions(+), 84 deletions(-)
 tests:  29|0
total_score: 70/70
1aced95
Sun May  4 19:08:10 -04 2025: 
 treemap.c | 230 +++++++++++++++++++++++---------------------------------------
 1 file changed, 84 insertions(+), 146 deletions(-)
 tests:  0|0
30d3618
Sun May  4 19:10:45 -04 2025: 
 treemap.c | 124 +++++++++++++++++++++++++++++++++++---------------------------
 1 file changed, 71 insertions(+), 53 deletions(-)
 tests:  0|0
e5b3eb0
Sun May  4 19:11:37 -04 2025: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
67cf0e0
Sun May  4 19:18:04 -04 2025: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
0689ba8
Sun May  4 19:20:52 -04 2025: 
 treemap.c | 15 +++++++--------
 1 file changed, 7 insertions(+), 8 deletions(-)
Compilation failed
In file included from test.c:4:
./treemap.c:60:1: error: unknown type name 'PPair'; did you mean 'Pair'?
PPair *searchTreeMap(TreeMap *tree, void *key)
^~~~~
Pair
./treemap.h:9:3: note: 'Pair' declared here
} Pair;
  ^
test.c:506:9: warning: variable 'all_correct' set but not used [-Wunused-but-set-variable]
    int all_correct=1;
        ^
1 warning and 1 error generated.
f1f6450
Sun May  4 19:21:13 -04 2025: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b59d643
Sun May  4 19:22:52 -04 2025: 
 treemap.c | 262 ++++++++++++++++++++++++++++++++++++--------------------------
 1 file changed, 152 insertions(+), 110 deletions(-)
 tests:  29|0
total_score: 70/70
e36f3e9
Sun May  4 19:23:37 -04 2025: 
 treemap.c | 14 ++++++--------
 1 file changed, 6 insertions(+), 8 deletions(-)
 tests:  29|0
total_score: 70/70
7eb81b6
Sun May  4 19:25:56 -04 2025: 
 treemap.c | 56 +++++++++++++++++++++-----------------------------------
 1 file changed, 21 insertions(+), 35 deletions(-)
 tests:  29|0
total_score: 70/70
70e1962
Sun May  4 19:27:41 -04 2025: 
 treemap.c | 69 +++++++++++++++++++++++----------------------------------------
 1 file changed, 25 insertions(+), 44 deletions(-)
 tests:  0|0
b4c98b0
Sun May  4 19:30:36 -04 2025: 
 treemap.c | 18 +++++++++---------
 1 file changed, 9 insertions(+), 9 deletions(-)
 tests:  29|0
total_score: 70/70
11789f2
